--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -9,61 +9,61 @@
 
     <Button
         android:id="@+id/menu_sos_btn"
-        android:layout_width="150dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="100dp"
-        android:text="Button"
+        android:text="SOS"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/menu_locations_btn"
-        android:layout_width="150dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="100dp"
-        android:text="Button"
+        android:text="Τοποθεσίες"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_sos_btn" />
 
     <Button
         android:id="@+id/menu_pills_btn"
-        android:layout_width="150dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="100dp"
-        android:text="Button"
+        android:text="Χάπια"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_locations_btn" />
 
     <Button
         android:id="@+id/menu_returnhome_btn"
-        android:layout_width="150dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="40dp"
-        android:text="Button"
+        android:layout_marginEnd="15dp"
+        android:text="Επιστροφή στο Σπίτι"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/menu_contacts_btn"
-        android:layout_width="150dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="40dp"
-        android:text="Button"
+        android:layout_marginEnd="15dp"
+        android:text="Επαφές"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_returnhome_btn" />
 
     <Button
         android:id="@+id/menu_profile_btn"
-        android:layout_width="150dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="40dp"
-        android:text="Button"
+        android:layout_marginEnd="15dp"
+        android:text="Προφίλ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_contacts_btn" />
 
