--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -52,7 +52,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contactsRecyclerView"
         android:layout_width="398dp"
-        android:layout_height="591dp"
+        android:layout_height="610dp"
         android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
@@ -61,12 +61,23 @@
         android:id="@+id/addAContact"
         android:layout_width="59dp"
         android:layout_height="59dp"
-        android:layout_marginStart="300dp"
-        android:layout_marginTop="672dp"
+        android:layout_marginStart="316dp"
+        android:layout_marginTop="708dp"
         android:backgroundTint="@android:color/holo_green_dark"
         android:text="+"
         android:textColor="@color/white"
         android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/numpadContact"
+        android:layout_width="59dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="708dp"
+        android:background="@null"
+        android:src="@drawable/numpadcontact"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
