--- a/app/src/main/res/layout/activity_add_contacts.xml
+++ b/app/src/main/res/layout/activity_add_contacts.xml
@@ -60,41 +60,45 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/home" />
 
+
     <EditText
         android:id="@+id/completedNameContact"
-        android:layout_width="0dp"
+        android:layout_width="288dp"
         android:layout_height="48dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="432dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginTop="436dp"
         android:ems="10"
-        android:hint="Όνομα"
+        android:hint="Συμπληρώστε όνομα"
+        android:textColorHint="#999999"
         android:inputType="text"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <EditText
         android:id="@+id/completedPhoneContact"
-        android:layout_width="0dp"
+        android:layout_width="288dp"
         android:layout_height="48dp"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="544dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginTop="556dp"
         android:ems="10"
-        android:hint="Τηλέφωνο"
+        android:hint="Συμπληρώστε τηλέφωνο"
+        android:textColorHint="#999999"
         android:inputType="phone"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="400dp"
         android:text="Όνομα:"
         android:textColor="@color/black"
@@ -106,7 +110,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="512dp"
         android:text="Τηλέφωνο:"
         android:textColor="@color/black"
