--- a/app/src/main/res/layout/activity_view_location.xml
+++ b/app/src/main/res/layout/activity_view_location.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewLocationActivity">
+    tools:context=".Locations.ViewLocationActivity">
 
     <ImageView
         android:id="@+id/ViewLocationsBackground"
