--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="@drawable/location_background_rectangle"
-    tools:context=".LocationsListViewAdapter">
+    tools:context=".Locations.LocationsListViewAdapter">
 
     <TextView
         android:id="@+id/locationListName"
