--- a/app/src/main/res/layout/activity_view_location.xml
+++ b/app/src/main/res/layout/activity_view_location.xml
@@ -52,10 +52,11 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="5dp"
+        app:tint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ViewLocationBanner"
-        app:srcCompat="@drawable/person" />
+        app:srcCompat="@drawable/location" />
 
     <TextView
         android:id="@+id/LocationViewName"
