--- a/app/src/main/res/layout/activity_locations.xml
+++ b/app/src/main/res/layout/activity_locations.xml
@@ -9,8 +9,9 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/locations" />
@@ -54,6 +55,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:divider="@android:color/transparent"
         android:dividerHeight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/locationBanner" />
+        app:layout_constraintTop_toBottomOf="@+id/locationBanner" >
+
+    </ListView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
