--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0B1580</color>
+    <color name="green">#4CAF50</color>
+    <color name="red">#D32F2F</color>
+    <color name="orange">#FFA500</color>
 </resources>
