--- a/app/src/main/res/layout/activity_edit_location.xml
+++ b/app/src/main/res/layout/activity_edit_location.xml
@@ -5,10 +5,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Locations.ViewLocationActivity">
+    tools:context=".Locations.EditLocationActivity">
 
     <ImageView
-        android:id="@+id/ViewLocationsBackground"
+        android:id="@+id/EditLocationsBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
@@ -17,7 +17,7 @@
         app:srcCompat="@drawable/locations" />
 
     <ImageView
-        android:id="@+id/ViewLocationBanner"
+        android:id="@+id/EditLocationBanner"
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:scaleType="centerCrop"
@@ -27,7 +27,7 @@
         app:srcCompat="@drawable/imagebasic" />
 
     <ImageView
-        android:id="@+id/homeButtonViewLocation"
+        android:id="@+id/homeButtonEditLocation"
         android:layout_width="63dp"
         android:layout_height="36dp"
         android:layout_marginTop="22dp"
@@ -40,27 +40,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
-        android:text="Προβολή Τοποθεσίας"
+        android:text="Επεξεργασία Τοποθεσίας"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ViewLocationBanner" />
+        app:layout_constraintTop_toTopOf="@+id/EditLocationBanner" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/editImageView4"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ViewLocationBanner"
+        app:layout_constraintTop_toBottomOf="@+id/EditLocationBanner"
         app:srcCompat="@drawable/location"
         app:tint="@color/blue" />
 
     <TextView
-        android:id="@+id/LocationViewName"
+        android:id="@+id/LocationEditName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -68,26 +68,28 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/ViewLocationsBackground"
+        app:layout_constraintEnd_toEndOf="@+id/EditLocationsBackground"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/editImageView4" />
 
-    <TextView
-        android:id="@+id/ViewLocationDisplayName"
+    <EditText
+        android:id="@+id/EditLocationDisplayName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
+        android:hint="Εισαγάγετε το όνομα"
+        android:padding="12dp"
         android:text="TextView"
+        android:textColorHint="#999999"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/LocationViewName" />
+        app:layout_constraintTop_toBottomOf="@+id/LocationEditName" />
 
     <TextView
-        android:id="@+id/LocationViewAddress"
+        android:id="@+id/LocationEditAddress"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -95,26 +97,28 @@
         android:text="Διεύθυνση"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/ViewLocationsBackground"
+        app:layout_constraintEnd_toEndOf="@+id/EditLocationsBackground"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ViewLocationDisplayName" />
+        app:layout_constraintTop_toBottomOf="@+id/EditLocationDisplayName" />
 
-    <TextView
-        android:id="@+id/ViewLocationDisplayAddress"
+    <EditText
+        android:id="@+id/EditLocationDisplayAddress"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
+        android:hint="Εισαγάγετε τη διεύθυνση"
+        android:padding="12dp"
         android:text="TextView"
+        android:textColor="@color/black"
+        android:textColorHint="#999999"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/LocationViewAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/LocationEditAddress" />
 
     <TextView
-        android:id="@+id/LocationViewZipCode"
+        android:id="@+id/LocationEditZipCode"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -122,26 +126,29 @@
         android:text="Ταχυδρομικός Κώδικας"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/ViewLocationsBackground"
+        app:layout_constraintEnd_toEndOf="@+id/EditLocationsBackground"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ViewLocationDisplayAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/EditLocationDisplayAddress" />
 
-    <TextView
-        android:id="@+id/ViewLocationDisplayZipCode"
+    <EditText
+        android:id="@+id/EditLocationDisplayZipCode"
         android:layout_width="300dp"
+        android:inputType="number"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:textColor="@color/black"
+        android:hint="Εισαγάγετε τον ταχ. κώδ."
+        android:padding="12dp"
         android:text="TextView"
+        android:textColor="@color/black"
         android:textSize="18sp"
+        android:textColorHint="#999999"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/LocationViewZipCode" />
+        app:layout_constraintTop_toBottomOf="@+id/LocationEditZipCode" />
 
     <TextView
-        android:id="@+id/LocationViewCity"
+        android:id="@+id/LocationEditCity"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -149,59 +156,38 @@
         android:text="Πόλη"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/ViewLocationsBackground"
+        app:layout_constraintEnd_toEndOf="@+id/EditLocationsBackground"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ViewLocationDisplayZipCode" />
+        app:layout_constraintTop_toBottomOf="@+id/EditLocationDisplayZipCode" />
 
-    <TextView
-        android:id="@+id/ViewLocationDisplayCity"
+    <EditText
+        android:id="@+id/EditLocationDisplayCity"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_marginTop="5dp"
+        android:textColorHint="#999999"
         android:background="@drawable/background_rectangle"
+        android:hint="Εισαγάγετε την πόλη"
+        android:padding="12dp"
         android:text="TextView"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/LocationViewCity" />
+        app:layout_constraintTop_toBottomOf="@+id/LocationEditCity" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/deleteLocation_btn"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/editLocationSave"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:backgroundTint="@color/red"
-        app:tint="@color/white"
-        app:srcCompat="@drawable/delete"
+        android:backgroundTint="@color/green"
+        android:text="Αποθήκευση"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/editLocation_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:backgroundTint="@color/orange"
-        app:tint="@color/white"
-        app:srcCompat="@drawable/edit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/directionsLocation_btn"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_margin="16dp"
-        app:backgroundTint="@color/green"
-        app:tint="@color/white"
-        app:srcCompat="@drawable/directions"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 
 
 
